Исправлена логика проверки ответа в тесте testGetPrioritizedTasks